# sdk

./: .gitignore  .gitmodules  build.ps1  build.sh  build_all.ps1  build_all.sh  build_compiler.sh  build_libc.ps1  build_libc.sh  build_libcxx.sh  build_libraries.sh  build_lld.sh  build_tools.ps1  default.workspace  default.workspace.layout  meson.build  meson_x64.ini  meson_x86.ini  readme.md  test.sh
googletest/: googletest.cbp  googletest.depend  googletest.layout  meson.build
libc/: config.json  entrypoints.txt
nirvana/: meson.build
nirvana/TestSTL/: TestSTL.cbp  TestSTL.depend  TestSTL.layout
nirvana/libmock/: libmock.cbp  libmock.depend  libmock.layout
nirvana/nirvana/: nirvana.cbp  nirvana.depend  nirvana.layout
nirvana/pch/: pch.h
sdk/: meson.build
test/: meson.build
test/hello_world/: main.cpp  meson.build
test/subprojects/: sdk.wrap
